# pytorch

./: .gitignore
aten/src/ATen/cuda/detail/: CUDAHooks.cpp
aten/src/ATen/hip/: CublasHandlePool.cpp  Exceptions.h  HIPApplyUtils.cuh  HIPBlas.cpp  HIPBlas.h  HIPConfig.h  HIPEvent.h  HIPFuture.h  HIPGeneratorImpl.cpp  HIPGraph.cpp  HIPGraph.h  HIPGraphsUtils.cuh  HIPMultiStreamGuard.h  HIPSolver.cpp  HIPSolver.h  LegacyTHFunctionsHIP.cpp  PinnedMemoryAllocator.cpp
aten/src/ATen/hip/detail/: HIPHooks.cpp  HIPHooks.h  KernelUtils.h  LazyNVRTC.cpp  OffsetCalculator.cuh
aten/src/ATen/hip/nvrtc_stub/: ATenNVRTC.h
aten/src/ATen/native/: RNN.cpp  SpectralOps.cpp
aten/src/ATen/native/cuda/: SpectralOps.cpp  SpectralOps.cu  printTensor.h
aten/src/ATen/native/hip/: AbsKernel.hip  Activation.hip  AdaptiveAveragePooling.hip  AdaptiveAveragePooling3d.hip  AdaptiveMaxPooling2d.hip  AdaptiveMaxPooling3d.hip  AmpKernels.hip  AveragePool2d.hip  AveragePool3d.hip  BatchLinearAlgebra.hip  BatchLinearAlgebraLib.h  BatchLinearAlgebraLib.hip  BinaryAddSubKernel.hip  BinaryBitwiseOpsKernels.hip  BinaryGeometricKernels.hip  BinaryMiscBackwardOpsKernels.hip  BinaryMiscOpsKernels.hip  BinaryMulDivKernel.hip  BinaryRemainderKernel.hip  BinaryShiftOpsKernels.hip  Blas.hip  Bucketization.hip  Col2Im.hip  CompareEQKernel.hip  CompareGEKernel.hip  CompareGTKernel.hip  CompareLEKernel.hip  CompareLTKernel.hip  CompareNEKernel.hip  ConvolutionMM2d.hip  Copy.hip  CopysignKernel.hip  CrossKernel.hip  CuFFTPlanCache.h  DepthwiseConv2d.hip  DilatedMaxPool2d.hip  DilatedMaxPool3d.hip  DistanceKernel.hip  DistributionBernoulli.hip  DistributionCauchyKernel.hip  (+100 more)
aten/src/THH/: CMakeLists.txt  THH.h  THHApply.cuh  THHAtomics.cuh  THHCachingHostAllocator.cpp  THHGeneral.h.in  THHReduce.cuh  THHReduceAll.cuh  THHReduceApplyUtils.cuh  THHScanUtils.cuh  THHSleep.hip  THHSortUtils.cuh  THHSortUtils.hip  THHStorage.cpp  THHTensorIndex.hip  THHTensorMasked.cuh  THHTensorMath.h  THHTensorMathCompareT.cuh  THHTensorMathMagma.hip  THHTensorMathPairwise.hip  THHTensorMathPointwise.cuh  THHTensorMathReduce.cuh  THHTensorMode.cuh  THHTensorMode.hip  THHTensorRandom.cuh  THHTensorRandom.h  THHTensorRandom.hip  THHTensorScatterGather.hip  THHTensorSort.cuh  THHTensorSort.hip  THHTensorTopK.cuh  THHThrustAllocator.cuh
aten/src/THH/generic/: THHStorage.cpp  THHStorageCopy.cpp  THHTensorIndex.h  THHTensorIndex.hip  THHTensorMasked.h  THHTensorMasked.hip  THHTensorMathMagma.h  THHTensorMathMagma.hip  THHTensorMathPairwise.hip  THHTensorMathPointwise.h  THHTensorMathPointwise.hip  THHTensorMathReduce.h  THHTensorMathReduce.hip  THHTensorMode.h  THHTensorMode.hip  THHTensorRandom.h  THHTensorRandom.hip  THHTensorSort.h  THHTensorSort.hip  THHTensorTopK.h  THHTensorTopK.hip
aten/src/THHUNN/: CMakeLists.txt  ClassNLLCriterion.hip  GatedLinearUnit.hip  LogSigmoid.hip  MultiLabelMarginCriterion.hip  MultiMarginCriterion.hip  RReLU.hip  SpatialClassNLLCriterion.hip  SpatialDepthwiseConvolution.hip
aten/src/THHUNN/generic/: ClassNLLCriterion.hip  GatedLinearUnit.hip  LogSigmoid.hip  MultiLabelMarginCriterion.hip  MultiMarginCriterion.hip  RReLU.hip  SpatialClassNLLCriterion.hip  SpatialConvolutionMM.hip  SpatialDepthwiseConvolution.hip  THHUNN.h
c10/hip/: HIPCachingAllocator.cpp  HIPCachingAllocator.h  HIPException.h  HIPFunctions.cpp  HIPFunctions.h  HIPGuard.h  HIPMathCompat.h  HIPStream.cpp  HIPStream.h
c10/hip/impl/: HIPGuardImpl.cpp  HIPGuardImpl.h  HIPTest.cpp  HIPTest.h
caffe2/core/hip/: context_gpu.h  context_gpu.hip  event_gpu.cc
caffe2/image/hip/: transform_gpu.hip
caffe2/operators/hip/: abs_op.hip  accuracy_op.hip  acos_op.hip  affine_channel_op.hip  arg_ops.hip  asin_op.hip  atan_op.hip  batch_gather_ops.hip  batch_moments_op.hip  batch_permutation_op.hip  batch_sparse_to_dense_op.hip  boolean_mask_ops.hip  boolean_unmask_ops.hip  bucketize_op.hip  cast_op.hip  cbrt_op.hip  ceil_op.hip  channel_backprop_stats_op.hip  channel_shuffle_op.hip  channel_stats_op.hip  clip_op.hip  cos_op.hip  cosh_op.hip  cosine_embedding_criterion_op.hip  cross_entropy_op.hip  cube_op.hip  deform_conv_op.hip  distance_op.hip  dropout_op.hip  elementwise_div_op.hip  elementwise_linear_op.hip  elementwise_mul_op.hip  elementwise_ops.hip  elu_op.hip  erf_op.hip  filler_op.hip  find_op.hip  floor_op.hip  gather_op.cuh  gelu_op.hip  (+75 more)
caffe2/operators/rnn/hip/: recurrent_network_op_gpu.hip
caffe2/sgd/hip/: adagrad_fused_op_gpu.cuh  adagrad_fused_op_gpu.hip
caffe2/utils/hip/: math_gpu.hip
caffe2/utils/math/hip/: reduce.hip
scripts/amd/: amd.short.dockerfile  build_pytorch_develop.sh  build_pytorch_jenkins.sh  debug.sh  debug_test.sh  docker_attach_latest.sh  docker_run_amd.sh  install_gdb.sh  run.sh  sync.sh  test.sh  test_fft.py  test_rnn.sh  test_softmax.sh  test_spectral.sh
test/: test_nn.py  test_spectral_ops.py
tools/autograd/templates/: python_variable_methods.cpp
torch/csrc/: CudaIPCTypes.cpp  CudaIPCTypes.h  DynamicTypes.cpp  Generator.cpp  Module.cpp
torch/csrc/autograd/: engine.cpp  profiler_cuda.cpp  profiler_legacy.cpp  profiler_legacy.h
torch/csrc/autograd/functions/: comm.cpp
torch/csrc/cuda/: Event.cpp  Graph.cpp  Module.cpp  Stream.cpp  Stream.h  comm.cpp  nccl.cpp  nccl.h  python_nccl.cpp
torch/csrc/cuda/shared/: cudart.cpp
torch/csrc/distributed/rpc/: macros.h  request_callback_impl.cpp  request_callback_no_python.cpp  tensorpipe_agent.cpp  tensorpipe_agent.h  tensorpipe_utils.cpp  tensorpipe_utils.h  utils.cpp
torch/csrc/generic/: StorageMethods.cpp  StorageSharing.cpp
torch/csrc/jit/cuda/: cuda.h
torch/csrc/jit/ir/: ir.h
torch/csrc/jit/python/: pybind_utils.h
torch/csrc/jit/runtime/: register_cuda_ops.cpp
torch/csrc/jit/tensorexpr/: cuda_codegen.cpp  cuda_codegen.h  ir_printer.cpp  tensorexpr_init.cpp
torch/lib/c10d/: NCCLUtils.hpp  ProcessGroupGloo.cpp  ProcessGroupGloo.hpp  ProcessGroupNCCL.cpp  ProcessGroupNCCL.hpp
torch/lib/c10d/test/: CUDATest.cu  CUDATest.hpp  ProcessGroupGlooAsyncTest.cpp  ProcessGroupGlooTest.cpp  ProcessGroupNCCLErrorsTest.cpp  ProcessGroupNCCLTest.cpp
(+76 files in other folders)
